# gitops

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .renovate.json5  .renovaterc.json5  .sops.yaml  404.html  Pipfile  README.md  Taskfile.yaml  WIP-timemachine.yaml  ansible.cfg  default.nix  gilt.yml  index.html  mkdocs.yml  mkdocs_theme.yml  nvmet-config.json  pub-cert.pem  pyproject.toml  search.html  sitemap.xml  sops-aws.enc.yaml  sops-secret.enc.yaml  timemachine.yaml  wildcard-cert.yaml
.github/: renovate.json5
.github/lint/: .yamllint.yaml
.github/workflows/: renovate.yaml
.renovate/: autoMerge.json5  groups.json5
.taskfiles/flux/: Taskfile.yaml
.taskfiles/nvidia/: Taskfile.yaml
.taskfiles/rook/: Taskfile.yaml  WipeDiskJob.tmpl.yaml  (+1 more)
_static/: custom.css
about/: index.html
ansible/: ansible.cfg  inventory
bootstrap/: ingress.sh  pvc.sh  secrets.sh  start-staging.sh  start.sh
cluster/: z-generated_secrets.yaml
docs/: dr.md  flux.md  index.md  k3s.md  prereqs.md
dr/: index.html
flux/: index.html
hack/: ceph-cleanup.sh  cert-service-account.yaml  cj-svc-acct.yaml  codex-del.sh  delete-ns.sh  enphase.py  fix-ssh.sh  kasten-login.sh  pvc-debugger.sh  pvcc.sh  rook-del.sh  rook-password.sh  runner  sa-kubeconfig.sh  shutdown.sh  terra-del.sh  wildcard-cert-heyjohn.yaml  wildcard-cert.yaml
k3s/: index.html
prereqs/: index.html
provision/: requirements.yml
search/: search_index.json
setup/: add-repo-key.sh  backup.sh  bootstrap-cluster.sh  bootstrap-ingress.sh  bootstrap-secrets.sh  restore.sh
zigbee/: default.nix
(+2017 files in other folders)
